<resources>
    <string name="app_name">Self Dictation</string>
    <string name="set_num">Набор %1$s</string>
    <string name="line_num">Показываемое предложение %1$s из %2$s</string>
    <string name="letters_sec_num">Букв %1$s; Секунд %2$s</string>
    <string name="stop_execution">Остановить выполнение\nнабора</string>
    <string name="show_line">Показать следующее\nпредложение</string>
    <string name="start_show">Начать показ</string>
    <string name="set_list">Список наборов</string>
    <string name="back_to_set_list">К списку\nнаборов</string>
    <string name="line_number">Предложение %1$s из %2$s</string>
    <string name="amount_execution_time">Общее время выполнения Набора %1$s :</string>
    <string name="base_set">Базовый список</string>
    <string name="user_set">Пользовательский список</string>
    <string name="duration">Продолжительность, сек</string>
    <string name="line_1">Предложение 1</string>
    <string name="line_2">Предложение 2</string>
    <string name="line_3">Предложение 3</string>
    <string name="line_4">Предложение 4</string>
    <string name="line_5">Предложение 5</string>
    <string name="line_6">Предложение 6</string>
    <string name="set_title">Название набора</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="number_of_symbols">Число символов</string>
    <string name="error_message">Поле должно быть заполнено</string>
    <string name="found_number_sets">Найдено %1$s наборов</string>
    <string name="delete">Удалить</string>
    <string name="remove_set">Удалить %1$s?</string>
    <string name="successfully_removed">Набор %1$s успешно удалён</string>
    <string name="remove_dialog">Подтверждение удаления набора</string>
    <string name="edit">Отредактировать</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
</resources>